refactor: simplify product filtering functionality and update related API endpoints